--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
     "web-vitals": "^2.1.4"
