--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-p5-wrapper": "^4.1.1",
     "react-scripts": "5.0.1",
     "react-use-measure": "^2.1.1",
     "sass": "^1.60.0",
