--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "dependencies": {
     "@cosmograph/cosmos": "^1.3.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "cross-env": "^7.0.3",
     "framer-motion": "^10.10.0",
-    "framer-motion-carousel": "^2.0.3",
     "react": "^18.2.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
@@ -20,13 +18,13 @@
     "react-scripts": "5.0.1",
     "react-use-measure": "^2.1.1",
     "sass": "^1.60.0",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts --openssl-legacy-provider test",
+    "eject": "react-scripts --openssl-legacy-provider eject"
   },
   "eslintConfig": {
     "extends": [
