--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-p5-wrapper": "^4.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-use-measure": "^2.1.1",
     "sass": "^1.62.0",
     "web-vitals": "^2.1.4"
