--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-p5-wrapper": "^4.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-use-measure": "^2.1.1",
     "sass": "^1.62.0",
